--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>古亦弘履歷</title>
-        <link rel="stylesheet" href="style2.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="prism.css"/>
     </head>
     <body>
@@ -27,7 +27,9 @@
                             </div>
                         </div>
                         <div class="information_container">
-                            <div class="contact">E-mail: hank.ku43@gmail.com <br/> Phone number: 0919160081
+                            <div class="contact_container">
+                                <div class="contact">E-mail: hank.ku43@gmail.com <br/> Phone number: 0919160081
+                                </div>
                             </div>
                             <div class="big_word_container">
                                 <div class="big_word"><p>網頁開發</p></div>
@@ -50,7 +52,7 @@
                         <button class="tag_button" id="tag_portfolio_2" onclick="switch_tag('tag_portfolio_2','portfolio_underline_2','portfolio_2')">3D物件設計</button>
                         <div class="tag_underline" id="portfolio_underline_2"></div> 
                     </div>
-                    <div class="tag_container">
+                    <div class="tag_container" id="future_work">
                         <button class="tag_button disabled">後續專案作品新增中</button>
                         <div class="tag_underline"></div> 
                     </div>
